--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-	"id": "obsidian-sample-plugin",
-	"name": "Sample Plugin",
-	"version": "1.0.1",
-	"minAppVersion": "0.9.12",
-	"description": "This is a sample plugin for Obsidian. This plugin demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md/about",
-	"isDesktopOnly": false
+  "id": "obsidian-collapse-all-plugin",
+  "name": "Collapse All Plugin",
+  "version": "0.1.0",
+  "minAppVersion": "0.9.12",
+  "description": "This plugin adds a button to collapse all folders in the file explorer.",
+  "author": "OfficerHalf",
+  "authorUrl": "https://nathan-smith.org/",
+  "isDesktopOnly": true
 }
