--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "id": "obsidian-collapse-all-plugin",
-  "name": "Collapse All Plugin",
+  "name": "Collapse All",
   "version": "0.1.0",
   "minAppVersion": "0.9.12",
   "description": "This plugin adds a button to collapse all folders in the file explorer.",
