--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "id": "obsidian-collapse-all-plugin",
   "name": "Collapse All",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "minAppVersion": "0.9.12",
-  "description": "This plugin adds a button to collapse all folders in the file explorer.",
+  "description": "This plugin adds a button to collapse or expand all folders in the file explorer.",
   "author": "OfficerHalf",
   "authorUrl": "https://nathan-smith.org/",
   "isDesktopOnly": true
