--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
   "id": "obsidian-collapse-all-plugin",
   "name": "Collapse All",
-  "version": "1.1.0",
-  "minAppVersion": "0.9.12",
+  "version": "1.2.0",
+  "minAppVersion": "0.12.10",
   "description": "This plugin adds a button to collapse or expand all folders in the file explorer.",
   "author": "OfficerHalf",
   "authorUrl": "https://nathan-smith.org/",
-  "isDesktopOnly": true
+  "isDesktopOnly": false
 }
