--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "keywords": [],
   "author": {
-    "name": "OfficerHalf",
+    "name": "Nathonius",
     "url": "https://nathan-smith.org/"
   },
   "license": "MIT",
